--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -128,6 +128,8 @@
 
 В рамках курса студенты должны разделиться на группы по 1--3 человека. Каждая группа должна выбрать одну из исследовательских тем, предложенных на первой лекции. По выбранной теме необходимо провести исследование и оформить его результаты в научную статью на английском языке, объемом 7--12 страниц формата \href{https://ctan.org/pkg/acmart}{acmart/sigplan}. Статья должна содержать обязательные разделы: Abstract, Introduction, Related Work, Method, Experimental Results, Discussion, Conclusion и References.
 
+Студент может также набрать баллы путем написания кода в одном из open source репозитории.
+
 Оценка за курс складывается из суммы баллов:
 
 \renewcommand{\arraystretch}{1}
@@ -137,6 +139,9 @@
 \midrule
 Студент представил черновик статьи (2+ страниц) до конца первого модуля & 1 \\
 Студент представил черновик статьи (4+ страниц) до конца второго модуля & 1 \\
+Студент успешно отправил 4+ pull requests & 1 \\
+Студент успешно отправил 8+ pull requests & 2 \\
+Студент успешно отправил 12+ pull requests & 4 \\
 Студент посетил 10 или более лекций & 1 \\
 Студент посетил 20 или более лекций & 3 \\
 Студент отправил статью на конференцию после разрешения преподавателя & 1 \\
