--- a/main.bib
+++ b/main.bib
@@ -2015,3 +2015,22 @@
   publisher={The MIT Press},
   doi= {10.5555/26777}
 }
+
+@article{filo2024evaluating,
+  title={{Evaluating Thresholds for Object-Oriented Software Metrics}},
+  author={Fil{\'o}, Tarc{\'\i}sio G. S. and Bigonha, Mariza A. S. and Ferreira, Kecia A. M.},
+  journal={{Journal of the Brazilian Computer Society}},
+  volume={30},
+  number={1},
+  pages={313--346},
+  year={2024},
+  doi={10.5753/jbcs.2024.3373}
+}
+
+@misc{filo2015catalogue,
+  title={{A Catalogue of Thresholds for Object-Oriented Software Metrics}},
+  author={Fil{\'o}, Tarc{\'\i}sio G. S. and Bigonha, Mariza and Ferreira, Kecia},
+  journal={{Proceedings of the First International Conference on Advances and Trends in Software Engineering}},
+  pages={48--55},
+  year={2015}
+}
