--- a/main.bib
+++ b/main.bib
@@ -2034,3 +2034,21 @@
   pages={48--55},
   year={2015}
 }
+
+@misc{bugayenko2015blog0629,
+  author = {Bugayenko, Yegor},
+  title = {{The Better Architect You Are, The Simpler Your Diagrams}},
+  howpublished = {\url{https://www.yegor256.com/150629.html}},
+  year = {2015},
+  month = {jun},
+  note = {[Online; accessed 22-09-2024]}
+}
+
+@misc{bugayenko2014blog1026,
+  author = {Bugayenko, Yegor},
+  title = {{Are You a Hacker or a Designer?}},
+  howpublished = {\url{https://www.yegor256.com/141026.html}},
+  year = {2014},
+  month = {oct},
+  note = {[Online; accessed 22-09-2024]}
+}
