--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -59,6 +59,12 @@
   {Indeed, the ratio of time spent reading vs. writing is well over 10:1. We are constantly reading old code as part of the effort to write new code. Because this ratio is so high, we want the \ul{reading} of code to be easy, even if it makes the \ul{writing} harder.}
   {martin2008clean}
 
+\qte
+  [Dustin Boswell]
+  {dustin-boswell}
+  {Code should be written to minimize the \ul{time} it would take for someone else to understand it. It's so important that we call it The Fundamental Theorem of Readability.}
+  {boswell2011art}
+
 \thought{Everybody wants higher \ul{quality of code}, but nobody knows how to measure it.}
 
 \qte
