--- a/main.bib
+++ b/main.bib
@@ -2052,3 +2052,10 @@
   month = {oct},
   note = {[Online; accessed 22-09-2024]}
 }
+
+@misc{boswell2011art,
+  title={{The Art of Readable Code}},
+  author={Boswell, Dustin and Foucher, Trevor},
+  year={2011},
+  publisher={O'Reilly Media, Inc.}
+}
