--- a/main.bib
+++ b/main.bib
@@ -2059,3 +2059,21 @@
   year={2011},
   publisher={O'Reilly Media, Inc.}
 }
+
+@misc{khorikov2015kiss,
+  author = {Khorikov, Vladimir},
+  title = {{KISS revisited}},
+  howpublished = {\url{https://enterprisecraftsmanship.com/posts/kiss-revisited/}},
+  year = {2015},
+  month = {jun},
+  note = {[Online; accessed 22-09-2024]}
+}
+
+@misc{rolland2013,
+  author = {Rolland, Stephane},
+  title = {{How can I convey complexity of source code without showing code?}},
+  howpublished = {\url{https://graphicdesign.stackexchange.com/a/16706/81312}},
+  year = {2013},
+  month = {mar},
+  note = {[Online; accessed 22-09-2024]}
+}
