--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -27,9 +27,23 @@
 
 \plush{\sqmTitlePage{2}{Cvv0Olx4Bpw}}
 
+\qte
+  [Trevor Foucher]
+  {trevor-foucher}
+  {Instead of minimizing the number of lines, a better metric is to minimize the \ul{time} needed for someone to understand it.}
+  {boswell2011art}
+
 \thought{Some programmers mistakenly feel proud of higher complexity of their code~\citep{bugayenko2015blog0629,bugayenko2014blog1026}.}
 
-\plush{\tbd{...}}
+\qte
+  {../02-cyclomatic-complexity/se-answer}
+  {Please don't take offense to this, but when a coder is \ul{proud} of the complexity of his/her code (like your sentence says `wow this code is sooo complex'), most of the time it is a sign of a really \ul{bad design}.}
+  {rolland2013}
+
+\qte
+  {vladimir-khorikov}
+  {The \ul{simpler} your solution is, the \ul{better} you are as a software developer. Most software developers can write code that works. Creating code that works \ul{and} is as simple as possible --- that is the true challenge.}
+  {khorikov2015kiss}
 
 \thought{Thomas McCabe suggested to measure Cyclomatic Complexity (CC) of source code.}
 
