--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -116,8 +116,6 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
   {The complexity density ratio is demonstrated to be a useful predictor of software maintenance productivity on a small pilot sample of actual maintenance project.}
   {gill1991cyclomatic}
 
-\thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
-
 \thought{Tom McCabe suggested to prohibit functions where CC is larger than \ul{ten}. Modern static analyzers may help you control this automatically.}
 
 \pitch{CC can be calculated by a few tools:
@@ -127,6 +125,7 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
 \item \href{https://pypi.org/project/mccabe/}{mccabe} for Python
 \item \href{https://github.com/rubocop/rubocop}{Rubocop} for Ruby
 \item \href{https://jshint.com/about/}{JSHint} for JavaScript
+\item \href{https://github.com/terryyin/lizard}{Lizard} for C++, and 20 other languages
 \end{itemize}}
 
 \end{document}
