--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -30,6 +30,26 @@
 \thought{Cyclomatic complexity is highly inaccurate if being compared with code readability evaluated by a human.}
 
 \qte
+  {jingqiu-shao}
+  {Cognitive complexity, the \ul{new measure} for software complexity presented in this paper, is a measure of the cognitive and psychological complexity of software as a human intelligence artifact.}
+  {shao2003new}
+
+\plush{
+  \begin{multicols}{2}
+  \includegraphics[width=.8\linewidth]{bcs.png}\par
+  BCS stands for ``\ul{basic control structure}.''
+  \par\columnbreak\par
+  ``The cognitive weight of software is the degree of difficulty or relative time and effort required for comprehending a given piece of software modelled by a number of BCSs. The total cognitive weight of a software component, \(W_c\), is defined as the sum of the cognitive weights of its \(q\) linear blocks composed of individual BCSs.''
+  \par
+  \source{shao2003new}
+  \end{multicols}}
+
+\qte
+  {yingxu-wang}
+  {Cognitive complexity of software is a product of its architectural and operational complexities on the basis of \ul{deductive semantics} and the \ul{abstract system theory}.}
+  {wang2006cognitive}
+
+\qte
   [Ann Campbell]
   {ann-campbell}
   {A guiding principle in the formulation of Cognitive Complexity has been that it should incent \ul{good} coding practices. That is, it should either ignore or discount features that make code more readable.}
