--- a/main.bib
+++ b/main.bib
@@ -2077,3 +2077,26 @@
   month = {mar},
   note = {[Online; accessed 22-09-2024]}
 }
+
+@inproceedings{wang2006cognitive,
+  title={{Cognitive Complexity of Software and Its Measurement}},
+  author={Wang, Yingxu},
+  booktitle={{Proceedings of the 5th International Conference on Cognitive Informatics}},
+  volume={1},
+  pages={226--235},
+  year={2006},
+  organization={IEEE},
+  doi={10.1109/COGINF.2006.365701}
+}
+
+@article{shao2003new,
+  title={{A New Measure of Software Complexity Based on Cognitive Weights}},
+  author={Shao, Jingqiu and Wang, Yingxu},
+  journal={{Canadian Journal of Electrical and Computer Engineering}},
+  volume={28},
+  number={2},
+  pages={69--74},
+  year={2003},
+  publisher={IEEE},
+  doi={10.1109/CJECE.2003.1532511}
+}
