--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -22,6 +22,7 @@
 
 \documentclass{article}
 \usepackage{../sqm}
+\usepackage{svg}
 \newcommand*\thetitle{Cognitive Complexity}
 \begin{document}
 
@@ -52,7 +53,7 @@
 \qte
   [Ann Campbell]
   {ann-campbell}
-  {A guiding principle in the formulation of Cognitive Complexity has been that it should incent \ul{good} coding practices. That is, it should either ignore or discount features that make code more readable.}
+  {A guiding principle in the formulation of Cognitive Complexity has been that it should incent \ul{good} coding practices. That is, it should either ignore or discount features that make code more readable.\pptPin{\includegraphics[width=7em]{sonarqube.pdf}}}
   {campbell2018cognitive}
 
 \pitch{
