--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -87,6 +87,13 @@
   \item for PHP by PHPCS via \href{https://github.com/Rarst/phpcs-cognitive-complexity}{this plugin}
   \end{itemize}}
 
+\thought{Maybe it's impossible to accurately measure the complexity of software.}
+
+\qte
+  {norman-fenton}
+  {We showed that the search for \ul{general} software complexity measures is doomed to failure.}
+  {fenton1994software}
+
 \thought{``Perceived complexity'' is human's impression and conceptualization of a system as being complex.}
 
 \pitch{
