--- a/main.bib
+++ b/main.bib
@@ -2100,3 +2100,15 @@
   publisher={IEEE},
   doi={10.1109/CJECE.2003.1532511}
 }
+
+@article{fenton1994software,
+  title={{Software Measurement: A Necessary Scientific Basis}},
+  author={Fenton, Norman},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={20},
+  number={3},
+  pages={199--206},
+  year={1994},
+  publisher={IEEE},
+  doi={10.1109/32.268921}
+}
