--- a/main.bib
+++ b/main.bib
@@ -2112,3 +2112,15 @@
   publisher={IEEE},
   doi={10.1109/32.268921}
 }
+
+@article{briand2001integrating,
+  title={{Integrating Scenario-Based and Measurement-Based Software Product Assessment}},
+  author={Briand, Lionel C. and W{\"u}st, J{\"u}rgen},
+  journal={{Journal of Systems and Software}},
+  volume={59},
+  number={1},
+  pages={3--22},
+  year={2001},
+  publisher={Elsevier},
+  doi={10.1016/S0164-1212(01)00045-0}
+}
