--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -31,6 +31,12 @@
 \thought{Cyclomatic complexity is highly inaccurate if being compared with code readability evaluated by a human.}
 
 \qte
+  [Lionel C. Briand]
+  {lionel-briand}
+  {By cognitive complexity we mean the \ul{mental burden} of the persons who have to deal with the class. We \ul{assume} that it is the, sometimes necessary, high cognitive complexity of a class which causes it to display undesirable external qualities, such as decreased maintainability and testability, or increased fault-proneness.}
+  {briand2001integrating}
+
+\qte
   {jingqiu-shao}
   {Cognitive complexity, the \ul{new measure} for software complexity presented in this paper, is a measure of the cognitive and psychological complexity of software as a human intelligence artifact.}
   {shao2003new}
