--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -37,6 +37,7 @@
   {briand2001integrating}
 
 \qte
+  [Jingqiu Shao]
   {jingqiu-shao}
   {Cognitive complexity, the \ul{new measure} for software complexity presented in this paper, is a measure of the cognitive and psychological complexity of software as a human intelligence artifact.}
   {shao2003new}
@@ -55,6 +56,21 @@
   {yingxu-wang}
   {Cognitive complexity of software is a product of its architectural and operational complexities on the basis of \ul{deductive semantics} and the \ul{abstract system theory}.}
   {wang2006cognitive}
+
+\qte
+  [Dharmender Singh Kushwaha]
+  {dharmender-singh-kushwaha}
+  {We developed an improved cognitive information complexity measure (CICM) that is based on the amount of information contained in the software and encompasses all the major parameters that have a bearing on the difficulty of comprehension or cognitive complexity of software.}
+  {kushwaha2006improved}
+
+\plush{
+  \begin{multicols}{2}
+  \includegraphics[width=.95\linewidth]{cicm.png}\par
+  \par\columnbreak\par
+  ``In a group of 25, each student was given 15 programs. They were asked to read the program and come out with what problem the program addressed. Time required to understand was recorded. The diagram shows that as cognitive information complexity increases, time taken to understand the program also increased.''
+  \par
+  \source{kushwaha2006improved}
+  \end{multicols}}
 
 \qte
   [Ann Campbell]
