--- a/main.bib
+++ b/main.bib
@@ -2124,3 +2124,14 @@
   publisher={Elsevier},
   doi={10.1016/S0164-1212(01)00045-0}
 }
+
+@article{kushwaha2006improved,
+  title={{Improved Cognitive Information Complexity Measure: A Metric that Establishes Program Comprehension Effort}},
+  author={Kushwaha, Dharmender Singh and Misra, Arun Kumar},
+  journal={{ACM SIGSOFT Software Engineering Notes}},
+  volume={31},
+  number={5},
+  pages={1--7},
+  year={2006},
+  publisher={ACM New York, NY, USA}
+}
