--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -73,6 +73,11 @@
   \end{multicols}}
 
 \qte
+  {anonymous}
+  {The cognitive weight of a BCS is measured as the number of ways that BCS can generate some factors that make it difficult to comprehend relative to the sequential BCS, of which the cognitive weight is `1'. The value of total cognitive weights of the software is measured as the number of relative ways that software can generate the combination of factors that make the function and semantics difficult to comprehend.}
+  {benjapol2008underlying}
+
+\qte
   [Ann Campbell]
   {ann-campbell}
   {A guiding principle in the formulation of Cognitive Complexity has been that it should incent \ul{good} coding practices. That is, it should either ignore or discount features that make code more readable.\pptPin{\includegraphics[width=7em]{sonarqube.pdf}}}
@@ -92,10 +97,10 @@
   \source{campbell2017}}
 
 \qte
-  [Luigi Lavazza]
-  {luigi-lavazza}
-  {Being able to find statistical correlations between code \ul{understandability} and source code \ul{measures} would be greatly beneficial for the software development process, which involves a great deal of activities involving program \ul{comprehension}.}
-  {lavazza2023empirical}
+  [Rub{\'e}n Saborido]
+  {ruben-saborido}
+  {Different cognitive complexity measures have been proposed to quantify the understandability of a piece of code and, therefore, its maintainability. However, the cognitive complexity metric provided by SonarSource is quickly spreading in the software industry due to the popularity of their well-known static code tools for evaluating software quality.}
+  {saborido2022automatizing}
 
 \pitch{\textcolor{orange}{CoCo} is supported by a few static analyzers:
   \begin{itemize}
@@ -115,6 +120,12 @@
   {norman-fenton}
   {We showed that the search for \ul{general} software complexity measures is doomed to failure.}
   {fenton1994software}
+
+\qte
+  [Luigi Lavazza]
+  {luigi-lavazza}
+  {Being able to find statistical correlations between code \ul{understandability} and source code \ul{measures} would be greatly beneficial for the software development process, which involves a great deal of activities involving program \ul{comprehension}.}
+  {lavazza2023empirical}
 
 \thought{``Perceived complexity'' is human's impression and conceptualization of a system as being complex.}
 
