--- a/main.bib
+++ b/main.bib
@@ -2135,3 +2135,24 @@
   year={2006},
   publisher={ACM New York, NY, USA}
 }
+
+@misc{benjapol2008underlying,
+  title={{Underlying Cognitive Complexity Measure Computation with Combinatorial Rules}},
+  author={Benjapol, Auprasert and Limpiyakorn, Yachai},
+  journal={{International Journal of Computer and Systems Engineering}},
+  volume={45},
+  number={9},
+  pages={431--436},
+  year={2008}
+}
+
+@article{saborido2022automatizing,
+  title={{Automatizing Software Cognitive Complexity Reduction}},
+  author={Saborido, Rub{\'e}n and Ferrer, Javier and Chicano, Francisco and Alba, Enrique},
+  journal={{IEEE Access}},
+  volume={10},
+  pages={11642--11656},
+  year={2022},
+  publisher={IEEE},
+  doi={0.1109/ACCESS.2022.3144743}
+}
